--- a/sniffersapp/static/css/custom.css
+++ b/sniffersapp/static/css/custom.css
@@ -33,11 +33,11 @@ a i {
   color: #B22222;
 }
 
-#item_form .row:nth-of-type(4) .form-group {
+#item_form .row:nth-of-type(5) .form-group {
   float:left;
 }
 
-#item_form .row:nth-of-type(4) button {
+#item_form .row:nth-of-type(5) button {
   margin-top: 25px;;
 }
 
@@ -46,38 +46,74 @@ input[id=required_tag] {
 }
 
 
+/* Form Edit */
 
+#form_preview_area {
+  margin-top: 30px;
+}
 
-/* Form Preview */
 #form_preview_break {
   margin: 20px 0px;
-  padding: 20px 0px;
   font-size: 24px;
   font-weight: 100;
-  border-bottom: 2px solid #e7eaec;
+  /* border-bottom: 2px solid #e7eaec; */
+  float: left;
+}
+
+.form_preview_btn {
+  margin-left: 25px;
+  margin-top: 20px;
 }
 
 #form_preview {
-  margin: 20px 0px;
+  padding: 20px 0px;
+  border-top: 2px solid #e7eaec;
 }
 
-#form_title {
-  margin-bottom: 30px;
+.form_title {
+  margin-bottom: 20px;
   font-size: 20px;
 }
 
-#form_title i {
+.form_title i {
   font-size: 15px;
   padding-left: 10px;
 }
 
-.checkbox_label {
+.text_info {
+  padding-left: 25px;
+  margin-right: 25px;
   font-size: 15px;
-  padding: 15px 0px 15px 20px;
 }
 
-.textfield_area{
-    width: 100%;
+
+
+.help_icon {
+  float: left;
+  text-align: left !important;
+  margin-top: 7px;
+  padding: 0px;
+  min-width: 25px;
+}
+
+.textfield_row .help_icon {
+  margin-top: 20px;
+}
+
+.checkbox_select, .textfield_info {
+  padding-left: 0px;
+  float: left;
+}
+
+.checkbox_label {
+  font-size: 15px;
+  padding-top: 5px;
+  float: left;
+  width: 90%;
+}
+
+.text_area, .textfield_area{
+    width: 95%;
     height:100px;
     font-size: 15px;
     margin: 15px 0px;
@@ -87,17 +123,23 @@ input[id=required_tag] {
   background: #e7eaec;
 }
 
-.checkbox_row input[type=checkbox] {
+.checkbox_box input[type=checkbox] {
   width: 25px;
   height: 25px;
 }
 
-.checkbox_row .col-lg-1, .textfield_row .col-lg-1 {
-  padding-top: 10px;
-  text-align: right;
+.checkbox_box {
+  float: right;
+
 }
 
-.checkbox_row, .fa-pencil-square-o, .fa-trash{
+.edit_buttons {
+  width: 47px;
+  float: left;
+  margin-left: 0px;
+}
+
+.checkbox_row, .fa-pencil-square-o, .fa-trash, .fa-question-circle{
   font-size: 15px;
 }
 
